--- a/common/src/main/res/layout/common_title_layout.xml
+++ b/common/src/main/res/layout/common_title_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/title_content"
+    android:id="@+id/titleContent"
     android:layout_width="match_parent"
     android:layout_height="@dimen/common_title_bar_size">
 
@@ -16,7 +16,7 @@
         android:layout_width="@dimen/common_title_bar_size"
         android:layout_height="@dimen/common_title_bar_size"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:contentDescription="@null"
         android:scaleType="centerInside"
         app:srcCompat="@drawable/common_ic_title_back" />
@@ -25,7 +25,7 @@
         android:id="@+id/titleLayoutMenuContainer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:gravity="center_vertical"
         android:orientation="horizontal" />
 </RelativeLayout>
