--- a/common/src/main/res/layout/common_dialog_bottom_items_item.xml
+++ b/common/src/main/res/layout/common_dialog_bottom_items_item.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
+    <com.hjq.shape.view.ShapeTextView
         android:id="@+id/tvItemText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:gravity="center"
-        android:textColor="@color/common_text_h1_color"
         android:textSize="15dp"
+        app:shape_textColor="@color/common_text_h1_color"
+        app:shape_textSelectedColor="@color/common_text_theme"
         tools:text="选项" />
 </LinearLayout>
