--- a/app/src/main/res/layout/item_simple.xml
+++ b/app/src/main/res/layout/item_simple.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:gravity="center">
-
-</TextView>
+    android:layout_height="80dp"
+    android:gravity="center"
+    android:textSize="20dp" />
