图片选择器适配Android13

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="RefreshList" />
+
+            <Button
+                android:id="@+id/btnImagePicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ImagePicker" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
