Android13使用新版图片选择器

--- a/app/src/main/res/layout/fragment_image_picker.xml
+++ b/app/src/main/res/layout/fragment_image_picker.xml
@@ -8,6 +8,7 @@
     <me.wcy.common.widget.TitleLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tlBackgroundColor="@color/white"
         app:tlTitleText="ImagePicker" />
 
     <Button
