--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <me.wcy.common.widget.TitleLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        app:tlBackgroundColor="@color/white"
         app:tlShowBack="false"
         app:tlTitleText="AndroidCommon" />
 
