--- a/common/src/main/res/layout/common_title_content_default.xml
+++ b/common/src/main/res/layout/common_title_content_default.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvDefaultTitle"
+    android:id="@+id/common_title_text_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:paddingLeft="88dp"
-    android:paddingRight="88dp"
+    android:paddingHorizontal="12dp"
     android:singleLine="true"
     android:textColor="@color/common_text_h1_color"
     android:textSize="18dp"
