TitleLayout开放跟随内容滚动能力

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -14,6 +14,7 @@
         <attr name="tlJustShowStatusBar" format="boolean" />
         <attr name="tlScrollViewId" format="reference" />
         <attr name="tlScrollThreshold" format="dimension" />
+        <attr name="tlUpdateTitleAlphaWhenScroll" format="boolean" />
         <attr name="tlShowBack" format="boolean" />
         <attr name="tlBackCloseStyle" format="boolean" />
         <attr name="tlTitleContentLayout" format="reference" />
