--- a/common/src/main/res/layout/common_load_sir_empty.xml
+++ b/common/src/main/res/layout/common_load_sir_empty.xml
@@ -49,7 +49,7 @@
                 android:visibility="gone"
                 app:shape_radius="17dp"
                 app:shape_strokeColor="@color/common_text_theme"
-                app:shape_strokeWidth="1dp"
+                app:shape_strokeSize="1dp"
                 app:shape_textColor="@color/common_text_theme"
                 tools:text="按钮"
                 tools:visibility="visible" />
