--- a/sample/src/main/res/layout/fragment_api.xml
+++ b/sample/src/main/res/layout/fragment_api.xml
@@ -23,6 +23,7 @@
         <TextView
             android:id="@+id/tvLog"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
     </ScrollView>
 </LinearLayout>
