--- a/sample/src/main/res/layout/item_refresh_list.xml
+++ b/sample/src/main/res/layout/item_refresh_list.xml
@@ -3,4 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:gravity="center"
+    android:textColor="@color/black"
     android:textSize="20dp" />
